# like-iam

./: .golangci.yaml  README.md  go.work  go.work.sum
api/: Makefile  README.md  go.mod
api/apiserver/v1/: policy.go  secret.go  user.go
api/authzserver/v1/: response.go
api/proto/v1/: apiserver.pb.go  (+2 more)
component/: README.md  go.mod  go.sum
component-base/: go.mod  go.sum
component-base/auth/: auth.go  jwt.go
component-base/base/: coder.go
component-base/errors/: bench_test.go  code.go  codes.go  doc.go  errors.go  errors_test.go  example_test.go  format.go  format_test.go  go113.go  go113_test.go  json_test.go  stack_test.go
component-base/helper/: mapper.go  slice.go  string.go
component-base/json/: msgpack.go  msgpack_tag.go
component-base/meta/: doc.go
component-base/validator/: password.go  validator.go
component-base/version/: doc.go  version.go
component-base/web/: ping.go  res.go  res_test.go  url.go  url_test.go
iam/: Makefile  go.mod  go.sum
iam-sdk-go/: README.md  go.mod
iam-sdk-go/service/: config.go  service.go
iam-sdk-rust/: Cargo.toml  README.md  config.yaml
iam-sdk-rust/src/: error.rs  lib.rs
iam-sdk-rust/src/api/: authz.rs  format.rs  login.rs  meta.rs  mod.rs  policy.rs  secret.rs  user.rs
iam-sdk-rust/src/iam/: config.rs  mod.rs  rest.rs
iam-sdk-rust/src/iam/chain/: api_v1.rs  authz_v1.rs  client.rs  interface.rs  mod.rs
iam-sdk-rust/src/iam/tradition/: client.rs  mod.rs  request.rs
log/: doc.go  go.mod  log.go  log_test.go  options.go
log/klog/: klog.go
test/: go.mod  math.go  math_test.go
(+180 files in other folders)
